Avoid clearing a page's layout overflow after paginated layout

This was flushed out by https://codereview.chromium.org/2089373002.

If we've forced a layout on paged media and find that our width exceeds
the page's then we may end up needing to clip some of the horizontal overflow.
We do this by calculating it manually and storing it as layout overflow.
However if our scrollbars are changing we will force another layout on the
frame that overwrites this good work. So make sure we preserve any clipped
overflow on the frame.

It's very hard to reproduce print preview issues reliably but fortunately
this specific issue can be recreated during layout testing by using
@media page rules so that's how we reproduce it here. I was going to revert
the CL in 2089373002 but it's very hard to prove either way that that is
achieving anything - this change on the other hand has an intelligible
rationale and does ensure the expected clipping of width.

Related bugs potentially fixed by this are 660058 and 690621.

BUG=664235

Review-Url: https://codereview.chromium.org/2747623002
Cr-Commit-Position: refs/heads/master@{#460292}

Former-commit-id: 593eebedc4013ea212b05c21dba300d41a6d7977